fixed: position of nav item deleting X cut off
https://app.asana.com/0/9056903824374/27345418521330

--- a/element-styles/unewnavigation/main-nav.css
+++ b/element-styles/unewnavigation/main-nav.css
@@ -82,3 +82,6 @@
 #page .main-nav div[data-style="burger"][ data-burger_alignment="full"] ul.menu {
 	top: auto;
 }
+#page .main-nav ul.menu > li > i.delete_menu_item {
+    top:0;
+}
